java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/UncaughtExceptionTest/testInsideCtor-hints.pass
Add throws clause for java.io.FileNotFoundException
Surround Statement with try-catch
Surround Block with try-catch
